Update server to respond to GET with an array of comments

--- a/ofscomments/ofscomments.fsproj
+++ b/ofscomments/ofscomments.fsproj
@@ -50,7 +50,7 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
-    <Compile Include="Library1.fs" />
+    <Compile Include="CommentTypes.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
