Server goes to table storage to load comments

--- a/ofscomments/ofscomments.fsproj
+++ b/ofscomments/ofscomments.fsproj
@@ -51,6 +51,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="CommentTypes.fs" />
+    <Compile Include="CommentStorage.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
