Server implements sanitization for Name and Comment fields of user input

--- a/ofscomments/ofscomments.fsproj
+++ b/ofscomments/ofscomments.fsproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="CommentTypes.fs" />
     <Compile Include="CommentStorage.fs" />
+    <Compile Include="Processing.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
